samples/_failures_safe/1761193904_6c3d6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66b42048.c: In function ‘main’:
./samples/SAFE/__tmp_66b42048.c:150:12: error: missing terminating " character
  150 |     printf("\nTokens:\n
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_66b42048.c:150:5: error: expected expression at end of input
  150 |     printf("\nTokens:\n
      |     ^~~~~~
./samples/SAFE/__tmp_66b42048.c:150:5: error: expected declaration or statement at end of input
